[project]
name = "testsoftware-monitor"
version = "0.1.0"
description = ""
authors = [
    {name = "Päpke, Tim Carlo",email = "tim.paepke@stud.tu-darmstadt.de"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
]

[tool.poetry]
packages = [{include = "testsoftware_monitor", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
